--- a/css/search.css
+++ b/css/search.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: Geomanist;
   src: url("../fonts/Geomanist-Regular.otf"); }
-html, body, label {
-  font-family: Geomanist !important;
+html, body {
+  font-family: "Lato", sans-serif !important;
   font-size: 16px;
   font-weight: 300 !important;
   text-decoration: none !important;
@@ -10,10 +10,19 @@ html, body, label {
   background-color: #F3F3F3;
   z-index: 2; }
 
+label {
+  font-family: "Lato", sans-serif !important;
+  font-size: 16px;
+  font-weight: 300 !important;
+  text-decoration: none !important;
+  -webkit-font-smoothing: antialiased !important;
+  z-index: 2; }
+
 p, li {
   color: #3F3F3F !important; }
 
 a {
+  font-family: "Lato", sans-serif;
   text-decoration: none !important;
   color: #B8807F; }
 
@@ -27,6 +36,14 @@ a:hover {
   top: 0;
   left: 0;
   right: 0; }
+  .navbar-default .container-fluid .navbar-header .navbar-toggle {
+    border-color: #5f5f5f; }
+    .navbar-default .container-fluid .navbar-header .navbar-toggle .icon-bar {
+      background-color: #5f5f5f !important; }
+  .navbar-default .container-fluid .navbar-header .navbar-toggle:hover, .navbar-default .container-fluid .navbar-header .navbar-toggle:focus {
+    background-color: #5f5f5f !important; }
+    .navbar-default .container-fluid .navbar-header .navbar-toggle:hover .icon-bar, .navbar-default .container-fluid .navbar-header .navbar-toggle:focus .icon-bar {
+      background-color: white !important; }
   .navbar-default .container-fluid .navbar-header .navbar-brand img {
     display: inline-block;
     margin: 0;
@@ -53,7 +70,6 @@ a:hover {
     background: transparent; }
     .dropdown-menu li a {
       color: white;
-      font-family: Geomanist;
       font-weight: 300; }
   .dropdown-menu li:hover {
     background: transparent; }
@@ -228,7 +244,8 @@ p, li {
 
 input.xs-input {
   border-radius: 0px !important;
-  -webkit-appearance: none !important; }
+  -webkit-appearance: none !important;
+  font-family: "Lato", sans-serif; }
 
 .centered {
   text-align: center; }
@@ -238,89 +255,6 @@ input.xs-input {
 
 .paddinged {
   padding: 20px 0px 20px 0px; }
-
-.carousel {
-  max-height: 800px;
-  z-index: 0; }
-
-/*Slides*/
-.container {
-  margin: 0 auto;
-  position: relative;
-  width: 60%;
-  max-width: 500px;
-  top: 30%;
-  padding: 10px;
-  color: white; }
-
-.caption {
-  color: white;
-  text-align: center;
-  text-shadow: 0px 1px 1px #010101;
-  font-size: 70px;
-  font-weight: 200;
-  font-family: "Raleway", sans-serif !important; }
-
-.slides-container li img {
-  position: fixed !important; }
-
-.slides-navigation a {
-  border-color: 3px solid #fff;
-  text-shadow: 0px 1px 1px #000;
-  border-radius: 30px;
-  display: block;
-  text-decoration: none;
-  border: 3px solid #fff;
-  color: white;
-  font-weight: bold;
-  font-size: 26px;
-  margin: 0 25px;
-  text-shadow: 0 1px 1px #000;
-  text-align: center;
-  height: 40px;
-  width: 40px;
-  top: -40px;
-  padding: 1px;
-  opacity: 0.5; }
-
-.slides-navigation a:hover {
-  background-color: #eb5367;
-  opacity: 0.8; }
-
-.fa-chevron-right {
-  margin-right: -3px;
-  margin-top: 3px; }
-
-.fa-chevron-left {
-  margin-top: 3px;
-  margin-right: 3px; }
-
-.slides-pagination a {
-  border-color: white;
-  width: 15px;
-  height: 15px;
-  opacity: 0.8; }
-
-.slides-pagination {
-  position: relative;
-  bottom: 50px; }
-
-.slides-pagination a.current {
-  background: white; }
-
-.contrast {
-  text-align: center; }
-  .contrast a {
-    display: inline-block;
-    text-decoration: none;
-    opacity: 0.85; }
-  .contrast a:hover {
-    opacity: 1; }
-  .contrast h4 {
-    text-shadow: 0px 1px 1px #000;
-    color: white;
-    font-weight: 500;
-    font-family: "Raleway", sans-serif !important; }
 
 /* Color Schemes */
 .love {
@@ -517,6 +451,89 @@ input.xs-input {
 .checkbox p {
   display: inline; }
 
+.carousel {
+  max-height: 800px;
+  z-index: 0; }
+
+/*Slides*/
+.container {
+  margin: 0 auto;
+  position: relative;
+  width: 60%;
+  max-width: 500px;
+  top: 30%;
+  padding: 10px;
+  color: white; }
+
+.caption {
+  color: white;
+  text-align: center;
+  text-shadow: 0px 1px 1px #010101;
+  font-size: 70px;
+  font-weight: 200;
+  font-family: "Raleway", sans-serif !important; }
+
+.slides-container li img {
+  position: fixed !important; }
+
+.slides-navigation a {
+  border-color: 3px solid #fff;
+  text-shadow: 0px 1px 1px #000;
+  border-radius: 30px;
+  display: block;
+  text-decoration: none;
+  border: 3px solid #fff;
+  color: white;
+  font-weight: bold;
+  font-size: 26px;
+  margin: 0 25px;
+  text-shadow: 0 1px 1px #000;
+  text-align: center;
+  height: 40px;
+  width: 40px;
+  top: -40px;
+  padding: 1px;
+  opacity: 0.5; }
+
+.slides-navigation a:hover {
+  background-color: #eb5367;
+  opacity: 0.8; }
+
+.fa-chevron-right {
+  margin-right: -3px;
+  margin-top: 3px; }
+
+.fa-chevron-left {
+  margin-top: 3px;
+  margin-right: 3px; }
+
+.slides-pagination a {
+  border-color: white;
+  width: 15px;
+  height: 15px;
+  opacity: 0.8; }
+
+.slides-pagination {
+  position: relative;
+  bottom: 50px; }
+
+.slides-pagination a.current {
+  background: white; }
+
+.contrast {
+  text-align: center; }
+  .contrast a {
+    display: inline-block;
+    text-decoration: none;
+    opacity: 0.85; }
+  .contrast a:hover {
+    opacity: 1; }
+  .contrast h4 {
+    text-shadow: 0px 1px 1px #000;
+    color: white;
+    font-weight: 500;
+    font-family: "Raleway", sans-serif !important; }
+
 .main-content {
   width: 100%;
   margin: auto;
@@ -548,6 +565,7 @@ hr {
   margin-bottom: 15px; }
 
 .panel {
+  font-family: "Lato", sans-serif;
   z-index: 30;
   border-width: 0;
   vertical-align: top;
@@ -579,8 +597,7 @@ hr {
       text-decoration: none !important;
       font-weight: 500;
       font-size: 18px;
-      display: block;
-      font-family: 'Helvetica'; }
+      display: block; }
   .panel .panel-body {
     padding: 0;
     width: 100%;
@@ -601,10 +618,8 @@ hr {
           -webkit-filter: opacity(1);
           filter: opacity(1); }
     .panel .panel-body .info-container p {
-      margin: 0px 5px 10px 5px; }
-      .panel .panel-body .info-container p b {
-        font-family: "Raleway", sans-serif;
-        font-weight: 500; }
+      margin: 0px 5px 10px 5px;
+      font-family: "Lato", sans-serif; }
     .panel .panel-body .info-container .project_hashtags {
       list-style-type: none;
       margin: 0px 5px 20px 5px;
@@ -653,10 +668,12 @@ hr {
     display: inline-block; }
 
 .list-group-item {
-  border: 0px;
+  border: 1px solid #AAAAAA;
+  border-radius: 20px !important;
+  padding: 8px 20px;
+  color: #555555;
   margin: 3px auto;
   font-weight: 500;
-  border-radius: 0 !important;
   text-align: center;
   display: inline-block; }
   .list-group-item .badge {
@@ -685,7 +702,7 @@ hr {
 
 .content-wrapper {
   margin: 0 auto; }
-  .content-wrapper .project-section {
+  .content-wrapper .result-section {
     margin-top: 40px; }
 
 .menu-top {
@@ -702,10 +719,13 @@ hr {
   list-style-type: none;
   margin-top: 105px; }
   .menu .menu-item {
+    font-family: "Raleway", sans-serif;
+    font-weight: 300;
     font-size: 20px;
-    font-family: Geomanist;
     text-align: center; }
     .menu .menu-item a {
+      font-family: "Raleway", sans-serif;
+      font-weight: 300;
       display: block;
       padding: 20px;
       color: #747474; }
@@ -742,7 +762,8 @@ hr {
   margin-bottom: 20px !important; }
 
 .author {
-  text-align: center; }
+  text-align: center;
+  font-size: 16px; }
 
 .search-group {
   max-width: 65%; }
@@ -755,7 +776,7 @@ hr {
   margin: 20px auto !important; }
 
 @media screen and (max-width: 767px) {
-  .project-section {
+  .result-section {
     margin-top: 0px; } }
 
 /*# sourceMappingURL=search.css.map */
