--- a/css/search.scss
+++ b/css/search.scss
@@ -9,7 +9,7 @@
 
 .content-wrapper{
   margin: 0 auto;
-  .project-section{
+  .result-section{
     margin-top: 40px;
   }
 }
@@ -37,10 +37,13 @@
   list-style-type: none;
   margin-top: 105px;
   .menu-item{
+    font-family: $font-family-main;
+    font-weight: 300;
     font-size: 20px;
-    font-family: $font-geo;
     text-align:center;
     a{
+      font-family: $font-family-main;
+      font-weight: 300;
       display:block;
       padding:20px;
       color: $color-main;
@@ -91,6 +94,7 @@
 
 .author{
   text-align:center;
+  font-size: 16px;
 }
 
 .status-available{
@@ -111,7 +115,7 @@
 }
 
 @media screen and (max-width: 767px) {
-  .project-section{
+  .result-section{
     margin-top: 0px;
   }
 }
