--- a/css/search.scss
+++ b/css/search.scss
@@ -82,6 +82,14 @@
   margin-bottom: 20px !important;
 }
 
+.status-available{
+  color: #81c784 !important;
+}
+
+.status-busy{
+  color: #e57373 !important;
+}
+
 .author{
   text-align:center;
   font-size: 16px;
