--- a/css/search.css
+++ b/css/search.css
@@ -584,14 +584,11 @@ hr {
   .panel .panel-heading {
     border-radius: 0;
     text-align: center;
-    background-color: #6895A0;
+    background-color: #ebebeb;
     width: 100%;
-    opacity: 0.95;
-    -webkit-box-shadow: 0px 3px 5px 2px rgba(0, 0, 0, 0.15);
-    -moz-box-shadow: 0px 3px 5px 2px rgba(0, 0, 0, 0.15);
-    box-shadow: 0px 3px 5px 2px rgba(0, 0, 0, 0.15); }
+    opacity: 0.95; }
     .panel .panel-heading .panel-title a {
-      color: white;
+      font-family: "Raleway", sans-serif;
       text-decoration: none !important;
       font-weight: 500;
       font-size: 18px;
@@ -626,8 +623,13 @@ hr {
         .panel .panel-body .info-container .project_hashtags .hashtag a span {
           font-family: "Raleway", sans-serif;
           font-weight: 500;
-          border-radius: 0;
-          background-color: #6895A0; }
+          border: 1px solid #6895A0;
+          background-color: transparent;
+          color: #5f5f5f;
+          border-radius: 30px; }
+        .panel .panel-body .info-container .project_hashtags .hashtag a span:hover {
+          background-color: #4db6ac;
+          color: white; }
     .panel .panel-body .info-container .project-params, .panel .panel-body .info-container .hashtag-params {
       text-align: center;
       list-style-type: none;
@@ -669,7 +671,7 @@ hr {
     border-radius: 0; }
 
 .list-group-item:hover {
-  background-color: #6895A0 !important;
+  background-color: #4db6ac !important;
   color: white !important;
   opacity: 0.7; }
 
@@ -745,6 +747,12 @@ hr {
 .status {
   text-align: center;
   margin-bottom: 20px !important; }
+
+.status-available {
+  color: #81c784 !important; }
+
+.status-busy {
+  color: #e57373 !important; }
 
 .author {
   text-align: center;
