--- a/css/project.css
+++ b/css/project.css
@@ -10,6 +10,9 @@ html, body {
   background-color: #F3F3F3;
   z-index: 2; }
 
+ul {
+  padding: 0; }
+
 label {
   font-family: "Lato", sans-serif !important;
   font-size: 16px;
